Using overflow hidden to prevent content spill on the spotlight and page links

--- a/wp-content/themes/standard-industries/styles/modules/_page-links.scss
+++ b/wp-content/themes/standard-industries/styles/modules/_page-links.scss
@@ -49,6 +49,7 @@
     color: white !important;
     display: block;
     padding-bottom: 64%;
+    overflow: hidden;
     position: relative;
     width: 100%;
 
