--- a/wp-content/themes/standard-industries/styles/modules/_spotlight.scss
+++ b/wp-content/themes/standard-industries/styles/modules/_spotlight.scss
@@ -76,6 +76,8 @@
     }
 
     &-link {
+      overflow: hidden;
+
       &:hover {
         .spotlight__slide-img {
           transform: scale(1);
